--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
       <td>원빈</td>
       <td>송승헌</td></tr>
 </table>
+<form action="request.php" method="post">
+        이름 : <input type="text" name="name"><br>
+        이메일 : <input type="text" name="email"><br>
+        <input type="submit">
+ </form>
 </body>
 </html>
