--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <td>원빈</td>
       <td>송승헌</td></tr>
 </table>
-<form action="request.php" method="post">
-        이름 : <input type="text" name="name"><br>
-        이메일 : <input type="text" name="email"><br>
+<form action="request.php">
+        이름 : <input type="text" name="n_ame"><br>
+        이메일 : <input type="text" name="e_mail"><br>
         <input type="submit">
  </form>
 </body>
