--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <td>원빈</td>
       <td>송승헌</td></tr>
 </table>
-<form action="https://chsilvia.github.io/my-first-web-site/request.php" method="get">
+<form action="/request.php" method="get">
         이름 : <input type="text" name="n_ame"><br>
         이메일 : <input type="text" name="e_mail"><br>
         <input type="submit">
